[package]
name = "storyboard"
version.workspace = true
edition.workspace = true
description.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]


v8 = { workspace = true }
deno_core = { workspace = true }
deno_runtime = { workspace = true }
spx = { workspace = true }
sketch-2d = "0.1.0"
wgpu = "0.16.1"
tokio = { version = "1.29.1", features = ["full"] }
tokio-util = { version = "0.7.8", features = ["compat"] }
relative-path = "1.8.0"

[build-dependencies]
spx-codegen = { workspace = true }
